--- a/test/fixtures/teaching_assistants.yml
+++ b/test/fixtures/teaching_assistants.yml
@@ -2,9 +2,18 @@
 #
 # Table name: teaching_assistants
 #
-#  id         :integer          not null, primary key
-#  created_at :datetime
-#  updated_at :datetime
+#  id                     :integer          not null, primary key
+#  created_at             :datetime
+#  updated_at             :datetime
+#  email                  :string(255)
+#  encrypted_password     :string(255)
+#  reset_password_token   :string(255)
+#  reset_password_sent_at :datetime
+#  remember_created_at    :datetime
+#  confirmation_token     :string(255)
+#  unlock_token           :string(255)
+#  first_name             :string(255)
+#  last_name              :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
